2011-04-08  Erik Arvidsson  <arv@chromium.org>

Reviewed by Dimitri Glazkov.

        IFrame is getting the focus even though it is hidden
        https://bugs.webkit.org/show_bug.cgi?id=55861

        * fast/dom/hidden-iframe-no-focus-expected.txt: Added.
        * fast/dom/hidden-iframe-no-focus.html: Added.
2011-04-08  Erik Arvidsson  <arv@chromium.org>

        Reviewed by Dimitri Glazkov.

        IFrame is getting the focus even though it is hidden
        https://bugs.webkit.org/show_bug.cgi?id=55861

        Test: fast/dom/hidden-iframe-no-focus.html

        * html/HTMLFrameOwnerElement.cpp:
        (WebCore::HTMLFrameOwnerElement::isKeyboardFocusable):
        * html/HTMLFrameOwnerElement.h:

Canonical link: https://commits.webkit.org/73129@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83356 268f45cc-cd09-0410-ab3c-d52691b4dbfc